--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,7 +10,7 @@ items:
 
 - title: contact
   class: contact
-  url: contact
+  url: mailto:jamie.adam.levinson@gmail.com
   page_url: /contact.html
 
 
